--- a/src/main/resources/eus/ehu/chismosas/mastodonfx/presentation/account.fxml
+++ b/src/main/resources/eus/ehu/chismosas/mastodonfx/presentation/account.fxml
@@ -20,7 +20,7 @@
         <RowConstraints maxHeight="82.0" minHeight="10.0" prefHeight="71.0" vgrow="SOMETIMES" />
         <RowConstraints maxHeight="77.0" minHeight="10.0" prefHeight="77.0" vgrow="SOMETIMES" />
     </rowConstraints>
-    <ImageView fx:id="avatar" fitHeight="48.0" fitWidth="48.0" pickOnBounds="true" preserveRatio="true" GridPane.halignment="CENTER" GridPane.rowSpan="2">
+    <ImageView fx:id="avatar" fitHeight="48.0" fitWidth="48.0" onMouseClicked="#goAccount" pickOnBounds="true" preserveRatio="true" GridPane.halignment="CENTER" GridPane.rowSpan="2">
         <Image url="@icons/user.png" />
     </ImageView>
     <Label fx:id="displayName" text="Label" textFill="WHITE" GridPane.columnIndex="1" GridPane.rowIndex="1" GridPane.valignment="TOP">
@@ -31,7 +31,7 @@
           <Font size="16.0" />
         </font>
     </Label>
-    <Label fx:id="userName" text="\@" textFill="WHITE" GridPane.columnIndex="1" GridPane.valignment="BOTTOM">
+    <Label fx:id="userName" onMouseClicked="#goAccount" text="\@" textFill="WHITE" GridPane.columnIndex="1" GridPane.valignment="BOTTOM">
         <GridPane.margin>
           <Insets bottom="5.0" />
         </GridPane.margin>
