--- a/src/main/resources/eus/ehu/chismosas/mastodonfx/presentation/account-selection.fxml
+++ b/src/main/resources/eus/ehu/chismosas/mastodonfx/presentation/account-selection.fxml
@@ -21,7 +21,12 @@
             <Image url="@icons/logo.png" />
          </image>
       </ImageView>
-      <Button fx:id="chooseAccountBtn" layoutX="260.0" layoutY="423.0" mnemonicParsing="false" onAction="#chooseAccount" onMouseClicked="#chooseAccount" style="-fx-background-color: #5c4de3;" text="Choose accunt" textFill="WHITE">
+      <Button fx:id="chooseAccountBtn" layoutX="383.0" layoutY="423.0" mnemonicParsing="false" onAction="#chooseAccount" onMouseClicked="#chooseAccount" style="-fx-background-color: #5c4de3;" text="Choose accunt" textFill="WHITE">
+         <font>
+            <Font name="System Bold" size="14.0" />
+         </font>
+      </Button>
+      <Button fx:id="AddAccountBtn" layoutX="127.0" layoutY="423.0" mnemonicParsing="false" style="-fx-background-color: #5c4de3;" text="Add new account" textFill="WHITE">
          <font>
             <Font name="System Bold" size="14.0" />
          </font>
