--- a/src/main/resources/eus/ehu/chismosas/mastodonfx/presentation/main-view.fxml
+++ b/src/main/resources/eus/ehu/chismosas/mastodonfx/presentation/main-view.fxml
@@ -21,7 +21,7 @@
    <right>
       <Pane prefHeight="318.0" prefWidth="216.0" BorderPane.alignment="CENTER">
          <TextArea fx:id="newTootArea" layoutX="19.0" layoutY="149.0" prefHeight="123.0" prefWidth="179.0" promptText="What are your thoughts?" />
-         <Button fx:id="publishButton" layoutX="131.0" layoutY="286.0" mnemonicParsing="false" onAction="#publishToot" style="-fx-background-color: #5c4de3;" text="Publish!" textFill="WHITE">
+         <Button fx:id="postButton" layoutX="131.0" layoutY="286.0" mnemonicParsing="false" onAction="#postToot" style="-fx-background-color: #5c4de3;" text="Post!" textFill="WHITE">
             <font>
                <Font size="14.0" />
             </font>
