--- a/src/main/resources/eus/ehu/chismosas/mastodonfx/presentation/status.fxml
+++ b/src/main/resources/eus/ehu/chismosas/mastodonfx/presentation/status.fxml
@@ -86,7 +86,7 @@
             <Insets left="30.0" />
         </GridPane.margin>
     </Label>
-    <ImageView fx:id="commentBtn" fitHeight="20.0" fitWidth="20.0" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="3" GridPane.halignment="CENTER" GridPane.rowIndex="2">
+    <ImageView id="comments" fx:id="commentBtn" fitHeight="20.0" fitWidth="20.0" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="3" GridPane.halignment="CENTER" GridPane.rowIndex="2">
         <GridPane.margin>
             <Insets right="50.0" />
         </GridPane.margin>
@@ -103,18 +103,14 @@
         </GridPane.margin>
     </ImageView>
    <TextFlow maxHeight="1.7976931348623157E308" prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="1" GridPane.columnSpan="3" GridPane.rowIndex="1" GridPane.vgrow="ALWAYS">
-      <children>
-         <Text fx:id="contentText" fill="WHITE" strokeType="OUTSIDE" strokeWidth="0.0" text="Text">
-            <font>
-               <Font size="14.0" />
-            </font>
-         </Text>
-      </children>
       <opaqueInsets>
          <Insets />
       </opaqueInsets>
       <GridPane.margin>
          <Insets top="10.0" />
       </GridPane.margin>
+      <children>
+         <Text id="content" fx:id="contentText" strokeType="OUTSIDE" strokeWidth="0.0" text="Text" />
+      </children>
    </TextFlow>
 </GridPane>
